...
          title={tl.t('seed.restore.title')}
          onBack={() => this.props.navigation.goBack()}
          noBorder
        />
        <Utils.Content paddingBottom='2'>
          <Utils.FormInput
            testID='restoreInput'
            placeholder={tl.t('seed.restore.placeholder')}
            height={90}
            padding={16}
            multiline
            numberOfLines={4}
            autoCapitalize='none'
...
            onChangeText={seed => this.setState({ seed })}
            onKeyPress={this._onKeyPress}
          />
        </Utils.Content>
        <Utils.Content paddingTop='2' paddingBottom='4'>
          <ButtonGradient
            testID='RestoreButton'
            disabled={!this.state.seed.length || loading}
            onPress={this._handleRestore}
            text={tl.t('seed.restore.button')}
          />
        </Utils.Content>
        <Utils.Content paddingTop='8'>
...
