...
import { Dimensions, Clipboard } from 'react-native'
import Toast from 'react-native-easy-toast'
import Feather from 'react-native-vector-icons/Feather'
import { Answers } from 'react-native-fabric'

// Design
import QRCode from '../../components/QRCode'
import { Colors, FontSize } from '../../components/DesignSystem'
import KeyboardScreen from '../../components/KeyboardScreen'
import Share from '../../components/Share'

// Utils
import { ActionButton } from './elements'
...
