...
    </Utils.View>
  }

  _renderRightElement = (onClose, onSearch, onSearchPressed, rightButton) => {
    let element = null
    if (onClose && !rightButton) {
      element = <TouchableOpacity onPress={onClose} testID='HeaderClose'>
        <Feather name='x' color='white' size={28} />
      </TouchableOpacity>
    } else if (onSearch && !rightButton) {
      element =
        <TouchableOpacity onPress={() => {
          this.setState({ isSearching: true })
...
